= HEAD

* Automatically dup unfrozen Array/Hash opts values when subclassing (jeremyevans)

* Add named_templates plugin, for creating inline templates by name, instead of storing them in the file system (jeremyevans)

* Support :template option in for render/view to specify template to use, instead of requiring separate argument (jeremyevans)

* Add class_level_routing plugin, for a DSL similar to Sinatra (jeremyevans)

* Make RodaRequest.consume_pattern not capture pattern by default (jeremyevans)

* Add static_path_info plugin, making Roda not modify PATH_INFO or SCRIPT_NAME during routing (jeremyevans)

* Use local/instance variable lookups instead of method calls to improve performance (jeremyevans)

* Add RodaRequest#session, and have #session delegate to that (jeremyevans)

* Add delegate plugin, for easily creating methods that delegate to request or response (jeremyevans)

* Add mailer plugin, allowing use of a routing tree for email instead of web responses (jeremyevans)

= 1.1.0 (2014-11-11)

* Add assets plugin, for rendering assets on the fly, or compiling them to a single compressed file (cj, jeremyevans) (#5)

* Make InstanceMethods in plugins not include constants, as they would pollute the constant namespace (jeremyevans)

* Make response.finish add the Content-Length header, not response.write (jeremyevans)

* Add response.finish_with_body to override response body used (jeremyevans)

* Use allocate instead of new in rack app (jeremyevans)

* Add chunked plugin, for easy streaming of template responses using Transfer-Encoding: chunked (jeremyevans)

* Add namespace support to the multi_route plugin, to support more complex applications (jeremyevans)

* Make r.multi_route use named route return value if not passed a block (jeremyevans)

* Make r.multi_route prefer longer route if multiple routes have the same prefix (jeremyevans)

* Add caching plugin, for handling http caching (jeremyevans)
